k8s/infrastructure/controllers/kyverno/base/ClusterPolicy.require-securitycontext.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-securitycontext
  annotations:
    policies.kyverno.io/title: Require Security Context
    policies.kyverno.io/description: Require Pods to set runAsNonRoot and seccompProfile at pod level, and require containers to set allowPrivilegeEscalation:false, readOnlyRootFilesystem:true, and drop all capabilities.
spec:
  background: true
  rules:
    - name: check-pod-securitycontext
      match: {any: [resources: {kinds: [Pod]}]}
      exclude: {any: [resources: {namespaceSelector: {matchExpressions: [{key: kubernetes.io/metadata.name, operator: In, values: [kube-system, kube-node-lease, kube-public]}]}}]}
      validate:
        failureAction: Audit
        message: "Pod must set runAsNonRoot: true and seccompProfile: {type: RuntimeDefault} at the pod level."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
              seccompProfile: {type: RuntimeDefault}
    - name: check-container-securitycontext
      match: {any: [resources: {kinds: [Pod]}]}
      exclude: {any: [resources: {namespaceSelector: {matchExpressions: [{key: kubernetes.io/metadata.name, operator: In, values: [kube-system, kube-node-lease, kube-public, kyverno, envoy-gateway-system, cilium-spire, cilium-secrets]}]}}]}  # falco
      validate:
        failureAction: Audit
        message: "All containers must set allowPrivilegeEscalation: false, readOnlyRootFilesystem: true, drop all capabilities, and must not run as privileged."
        foreach:
          - list: "request.object.spec.[containers, initContainers][]"
            pattern:
              securityContext:
                =(privileged): false
                allowPrivilegeEscalation: false
                readOnlyRootFilesystem: true
                capabilities: {drop: [ALL]}
